Added session login system without database. Adjusted Swagger a bit.
