# routes/accsearch.js
@@ -1,8 +1,9 @@
 
 const express = require('express');
-const router = express.Router()
+const router = express.Router();
+const auth = require('../config/passport-config').auth;
 
-router.get('/', async (req, res) =>
+router.get('/', auth, async (req, res) =>
 {
     res.status(418).send("Not yet implemented");
 })
